fix author aligning

--- a/services/frontend/src/components/Tables/AssistantListItem/AssistantListItem.module.scss
+++ b/services/frontend/src/components/Tables/AssistantListItem/AssistantListItem.module.scss
@@ -61,7 +61,7 @@
 .author {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: start;
   gap: 4px;
   
   img {
